workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/GarantiasGrupoProposta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as garantias do grupo da proposta</description>
    <label>Garantia do grupo da proposta</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantias do grupo da proposta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>