workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/DescontoAgravoMonetarioParcelamento__c.field-meta.xml
<CustomField>
    <fullName>DescontoAgravoMonetarioParcelamento__c</fullName>
    <label>Desconto agravo monetário parcelamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>