workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/GarantiaProposta__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProposta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia da proposta</label>
    <referenceTo>GarantiaProposta__c</referenceTo>
    <relationshipLabel>Garantias do grupo da proposta</relationshipLabel>
    <relationshipName>GarantiasGrupoProposta</relationshipName>
    <type>Lookup</type>
</CustomField>