workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/GarantiaReferenciada__c.field-meta.xml
<CustomField>
    <fullName>GarantiaReferenciada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia referenciada</label>
    <referenceTo>Garantia__c</referenceTo>
    <relationshipLabel>Garantias do grupo da proposta (Garantia referenciada)</relationshipLabel>
    <relationshipName>GarantiasReferenciadaGrupoProposta</relationshipName>
    <type>Lookup</type>
</CustomField>