workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/GrupoProposta__c.field-meta.xml
<CustomField>
    <fullName>GrupoProposta__c</fullName>
    <label>Grupo da proposta</label>
    <referenceTo>GrupoProposta__c</referenceTo>
    <relationshipLabel>Garantias do grupo da proposta</relationshipLabel>
    <relationshipName>GarantiasGrupoProposta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>