workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/MoedaGarantia__c.field-meta.xml
<CustomField>
    <fullName>MoedaGarantia__c</fullName>
    <formula>TEXT(GarantiaProduto__r.CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda da garantia</label>
    <type>Text</type>
</CustomField>