workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/NumeroSorte__c.field-meta.xml
<CustomField>
    <fullName>NumeroSorte__c</fullName>
    <label>Número da sorte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>