workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/PremioComercial__c.field-meta.xml
<CustomField>
    <fullName>PremioComercial__c</fullName>
    <label>Prêmio comercial R$</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>