workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/fields/TipoCapital__c.field-meta.xml
<CustomField>
    <fullName>TipoCapital__c</fullName>
    <label>Tipo de capital</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital global</fullName>
            </value>
            <value>
                <fullName>Capital uniforme</fullName>
            </value>
            <value>
                <fullName>Escalonado por cargo</fullName>
            </value>
            <value>
                <fullName>Escalonado por faixa salarial</fullName>
            </value>
            <value>
                <fullName>Livre escolha de capital</fullName>
            </value>
            <value>
                <fullName>Múltiplo por prêmio pago</fullName>
            </value>
            <value>
                <fullName>Múltiplo salarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>