workspace-sf/force-app/main/default/objects/GarantiasGrupoProposta__c/validationRules/BloquearPreenchimentoCampos.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearPreenchimentoCampos</fullName>
    <active>false</active>
    <description>Edições e adições de novos dados bloqueados para propostas com o status &quot;Contratada&quot;</description>
    <errorConditionFormula>AND(ISPICKVAL(  GrupoProposta__r.ContratanteProposta__r.Proposta__r.Status  , &quot;Contratada&quot;),
    $Profile.Name  &lt;&gt;  &quot;Administrador do sistema&quot;)</errorConditionFormula>
    <errorMessage>Edições de campos e adições de novos dados não são permitidas para Propostas com o Status &quot;Contratada&quot;</errorMessage>
</ValidationRule>